--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="shortcut icon" href="https://images.duckduckgo.com/iu/?u=http%3A%2F%2F3.bp.blogspot.com%2F-PTty3CfTGnA%2FTpZOEjTQ_WI%2FAAAAAAAAAeo%2FKeKt_D5X2xo%2Fs1600%2Fjs.jpg"
+    />
     <link rel="stylesheet" href="style.css">
     <title>JS Clock</title>
 </head>
@@ -13,7 +15,7 @@
     <p id="white-text">Current Date :</p>
     <p id="date"></p>
     <p id="white-text">Current time is :</p>
-    <p id="time"></p>
+    <p id="demo"></p>
     <script src="script.js"></script>
 </body>
 
